SERVER-13789 recursively build data access for subnodes beneath elemMatch